# swagger_output.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "https://api-thu-chi.herokuapp.com/",
   "basePath": "/",
   "tags": [
     {
@@ -276,9 +276,6 @@
               "$ref": "#/definitions/Group"
             }
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "not found any group"
           },
@@ -314,9 +311,6 @@
         "responses": {
           "201": {
             "description": "created successfully"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "schema": {
@@ -365,9 +359,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "not found any group to edit"
           },
@@ -409,9 +400,6 @@
         "responses": {
           "200": {
             "description": "successful."
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "not found any group to edit"
@@ -478,8 +466,129 @@
               }
             }
           },
-          "401": {
-            "description": "Unauthorized"
+          "404": {
+            "description": "Not found any post"
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/api/khoan-thu-chi/thang/{date}/so-do": {
+      "get": {
+        "tags": [
+          "Post"
+        ],
+        "description": "Endpoint to get all receipts, expenditures and total revenue, cost in a month.",
+        "parameters": [
+          {
+            "name": "date",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "a date in month then determine which month.",
+            "require": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receipts": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/expenditures"
+                  }
+                },
+                "expenditures": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/receipts"
+                  }
+                },
+                "tongThu": {
+                  "type": "number",
+                  "example": 10000000
+                },
+                "tongChi": {
+                  "type": "number",
+                  "example": 3000000
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "404": {
+            "description": "Not found any post"
+          },
+          "500": {
+            "description": "Error Internal Server"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/api/khoan-thu-chi/thang/{date}/ngay": {
+      "get": {
+        "tags": [
+          "Post"
+        ],
+        "description": "Endpoint to get all receipts, expenditures and total revenue, cost in a month.",
+        "parameters": [
+          {
+            "name": "date",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "a date in month then determine which month.",
+            "require": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receipts": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/expenditures"
+                  }
+                },
+                "expenditures": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/receipts"
+                  }
+                },
+                "tongThu": {
+                  "type": "number",
+                  "example": 10000000
+                },
+                "tongChi": {
+                  "type": "number",
+                  "example": 3000000
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "404": {
             "description": "Not found any post"
@@ -516,9 +625,6 @@
             "schema": {
               "$ref": "#/definitions/expenditures"
             }
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not found any post"
@@ -562,9 +668,6 @@
               "$ref": "#/definitions/expenditures"
             }
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not found any post"
           },
@@ -598,9 +701,6 @@
         "responses": {
           "204": {
             "description": "delete successfully."
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "404": {
             "description": "Not found any post"
@@ -636,9 +736,6 @@
           "201": {
             "description": "successful."
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not found any post"
           },
@@ -670,9 +767,6 @@
           "400": {
             "description": "Bad Request"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "schema": {
               "$ref": "#/definitions/someSchema"
@@ -698,9 +792,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "schema": {
